# watchfox

./: .gitignore  LICENSE  MANIFEST.in  README.md  config.toml  example-custom-cli.py  example-default-cli.py  example-move-tts.py  logging.toml  make-audio-fox.py  make-audio-ogs.py  make-audio.py  play-audio.py  pyproject.toml  test-audio.py
watchfox/: __init__.py  audio.py  cli.py  minifox.py  obs.py  sse.py  types.py  utils.py
watchfox/scripts/: mediamanager.py
